# AgentMEMO

./: .gitattributes  .gitignore  README.md  pyproject.toml  run.bat  run.sh
src/agentmemo/: __init__.py  __main__.py  app.py
src/agentmemo/core/: __init__.py  markdown.py  models.py  repository.py
src/agentmemo/server/: README.md  __init__.py  cli.py
src/agentmemo/ui/: main_window.py  memo_list.py  memo_view.py
src/agentmemo/ui/assets/: style.qss  viewer.html
tests/: test_markdown.py  test_repository.py
